--- a/rostelecom/src/pageComponents/services/tab/cards/cards.module.css
+++ b/rostelecom/src/pageComponents/services/tab/cards/cards.module.css
@@ -18,25 +18,10 @@
     padding:0; margin:0;
 }
 
-
-.container{
-    width: 100%;
-    height: fit-content;
-
-    display: grid;
-    flex-direction: column;
-    align-items: center;
-
-    grid-gap: 24px;
-    grid-template-columns: repeat(4,1fr);
-    margin-bottom: 48px;
-    margin-top: 24px;
-}
-
 .cardContainer{
     display: flex;
     flex-direction: column;
-    width: 300px;
+    /*width: 280px;*/
     height: fit-content;
     border-radius: 8px;
     border: 2px solid var(--color-backgroundTab);
@@ -49,7 +34,7 @@
     font-weight: normal;
     color: var(--color-primary);
     height: 64px;
-    margin: 16px 16px 8px 16px;
+    margin: 16px 16px 10px 16px;
 
     -webkit-line-clamp: 2; /* Число отображаемых строк */
     display: -webkit-box; /* Включаем флексбоксы */
@@ -65,7 +50,7 @@
 .cardConditionsContainer{
     display: flex;
     flex-direction: column;
-    padding: 0 16px 16px 16px;
+    padding: 0 16px 20px 16px;
 
     border-bottom: 1px solid var(--color-backgroundTab);
 }
@@ -89,7 +74,7 @@
     font-weight: normal;
     font-size: 16px;
     color: var(--color-primary);
-    margin: 0 0 2px 16px;
+    margin: 0 0 2px 12px;
 }
 
 .conditionSubName{
@@ -98,7 +83,7 @@
     font-size: 14px;
     color: var(--color-primary);
     line-height: 20px;
-    margin: 0 0 0 16px;
+    margin: 0 0 0 12px;
     opacity: .5;
 }
 
@@ -123,7 +108,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 8px;
+    margin-left: 10px;
 }
 
 .ruble{
