--- a/rostelecom/src/pageComponents/services/tab/tab.module.css
+++ b/rostelecom/src/pageComponents/services/tab/tab.module.css
@@ -13,6 +13,19 @@
     src: url('../../../font/RostelecomBasis-Bold.woff2') format('woff2');
 }
 
+.container{
+    width: 100%;
+    height: fit-content;
+
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+
+    grid-gap: 24px;
+    grid-template-columns: repeat(4,1fr);
+    margin-bottom: 48px;
+    margin-top: 24px;
+}
 
 .tabContainer{
     width: fit-content;
