--- a/rostelecom/src/pageComponents/services/tab/tab.module.css
+++ b/rostelecom/src/pageComponents/services/tab/tab.module.css
@@ -22,7 +22,7 @@
     align-items: center;
 
     grid-gap: 24px;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fill, minmax(306px, 1fr));
     margin-bottom: 48px;
     margin-top: 24px;
 }
