--- a/rostelecom/src/pageElements/header/header.module.css
+++ b/rostelecom/src/pageElements/header/header.module.css
@@ -16,6 +16,7 @@
 
 :root{
     --color-primary: #101828;
+    --color-error: red;
     --color-accent: #FF4F12;
     --color-accentHover: #d33706;
     --color-accentSecond: #7700ff;
@@ -23,6 +24,7 @@
     --color-secondaryHover: #fff6f3;
     --color-backgroundTab: #f3f3f4;
     --color-backgroundFooter: #272e3d;
+    --color-backgroundService: #f8f8f8;
 }
 
 .header {
@@ -40,6 +42,7 @@
     flex-direction: row;
     box-sizing: border-box;
     justify-content: space-between;
+    box-shadow: 0px 0px 5px rgb(16 24 40 / 20%);
 }
 
 .logo{
@@ -76,4 +79,19 @@
 }
 
 .account{
+    display: flex;
+    align-items: center;
+    outline: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-family: 'Rostelecom-Medium';
+    font-size: 20px;
+    color: var(--color-primary);
+    border-bottom: 1px dashed var(--color-primary);
+    transition: all 0.5s ease;
+}
+
+.account:hover{
+    opacity: .85;
 }
