--- a/rostelecom/src/pages/registration/registration.module.css
+++ b/rostelecom/src/pages/registration/registration.module.css
@@ -45,8 +45,8 @@
 }
 
 .formLogin{
-    width: 25%;
     margin-top: 88px;
+    width: 25%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,4 +79,20 @@
     color: var(--color-error);
     margin-top: 24px;
     text-align: center;
+}
+
+.inputMask{
+    width: 100%;
+    height: 48px;
+    box-sizing: border-box;
+    background-color: var(--color-backgroundTab);
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    padding: 0 16px;
+
+    color: var(--color-primary);
+    font-family: 'Rostelecom-Regular';
+    font-size: 16px;
+    margin-bottom: 16px;
 }
