--- a/rostelecom/src/pageComponents/account/account.module.css
+++ b/rostelecom/src/pageComponents/account/account.module.css
@@ -3,7 +3,7 @@
     top: 0;
     right: 0;
     margin-right: 160px;
-    z-index: 2;
+    z-index: 3;
     margin-top: 104px;
     display: flex;
     width: 424px;
@@ -70,4 +70,15 @@
     box-sizing: border-box;
     width: 100%;
     padding: 0 16px 8px 16px;
+}
+
+@media (max-width: 770px) {
+    .container{
+        margin-right: 16px;
+        margin-top: 64px;
+        right: auto;
+        width: 100%;
+        border-radius: 0px 0px 8px 8px;
+    }
+
 }
