--- a/rostelecom/src/pageComponents/banner/banner.module.css
+++ b/rostelecom/src/pageComponents/banner/banner.module.css
@@ -54,3 +54,18 @@
     background-position-x: center;
     transform: scale(1.03);
 }
+
+@media (max-width: 770px) {
+    .bannerContainer{
+        align-items: flex-start;
+        height: 320px;
+        margin-bottom: 64px;
+    }
+    .bannerTxt{
+        width: 100%;
+        padding: 32px 32px;
+        font-size: 32px;
+        box-sizing: border-box;
+    }
+
+}
