--- a/rostelecom/src/pageComponents/services/tab/tab.module.css
+++ b/rostelecom/src/pageComponents/services/tab/tab.module.css
@@ -1,18 +1,3 @@
-@font-face {
-    font-family: 'Rostelecom-Regular';
-    src: url('../../../font/RostelecomBasis-Regular.woff2') format('woff2');
-}
-
-@font-face {
-    font-family: 'Rostelecom-Medium';
-    src: url('../../../font/RostelecomBasis-Medium.woff2') format('woff2');
-}
-
-@font-face {
-    font-family: 'Rostelecom-Bold';
-    src: url('../../../font/RostelecomBasis-Bold.woff2') format('woff2');
-}
-
 .container{
     width: 100%;
     height: fit-content;
@@ -53,4 +38,16 @@
     font-size: 16px;
     color: var(--color-primary);
     transition: all 0.5s ease;
+}
+
+@media (max-width: 770px) {
+    .container{
+        margin-bottom: 0px;
+    }
+    .tabContainer{
+        overflow: scroll;
+        -ms-overflow-style: none;
+        width: 100%;
+    }
+    .tabContainer::-webkit-scrollbar { display: none; }
 }
