--- a/rostelecom/src/pages/auth/auth.module.css
+++ b/rostelecom/src/pages/auth/auth.module.css
@@ -22,6 +22,7 @@
     flex-direction: row;
     box-sizing: border-box;
     justify-content: space-between;
+    box-shadow: 0px 0px 5px rgb(16 24 40 / 20%);
 }
 
 .logo{
@@ -79,4 +80,24 @@
     color: var(--color-error);
     margin-top: 24px;
     text-align: center;
+}
+
+@media (max-width: 770px) {
+    .header{
+        height: 64px;
+        padding: 0 16px;
+    }
+    .rtcLogo{
+        width: 24px;
+        margin-right: 12px;
+    }
+    .title{
+        font-size: 18px;
+    }
+    .formLogin{
+        width: 100%;
+        box-sizing: border-box;
+        padding: 0 16px;
+    }
+
 }
