--- a/rostelecom/src/pages/servicePage/servicePage.module.css
+++ b/rostelecom/src/pages/servicePage/servicePage.module.css
@@ -4,7 +4,6 @@
     padding: 0 314px;
     display: flex;
     flex-direction: column;
-
 }
 
 .requestContainer{
@@ -104,4 +103,56 @@
     font-weight: normal;
     font-size: 16px;
     color: var(--color-error);
+}
+
+@media (max-width: 770px) {
+    .container{
+        padding: 0 0px;
+    }
+    .leftContainer{
+        margin: 0 24px;
+        border-right: none;
+        border-bottom: 1px solid var(--color-backgroundTab);
+    }
+    .rightContainer{
+        margin-top: 24px;
+    }
+    .requestContainer{
+        border-radius: 8px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(306px, 1fr));
+        margin-top: 24px;
+        margin-bottom: 24px;
+        padding-top: 32px;
+        padding-bottom: 40px;
+    }
+    .requestHeader{
+        font-size: 32px;
+        padding: 0px;
+    }
+
+    .requestTitle{
+        padding: 0 24px;
+    }
+    .rows{
+        border-bottom: 1px solid var(--color-backgroundTab);
+        margin: 0 24px 24px 24px;
+    }
+    .price{
+        padding: 0 24px;
+    }
+
+    .form{
+        padding: 0px;
+    }
+    .back{
+        margin-bottom: 24px;
+        padding: 0 24px;
+        font-size: 18px;
+    }
+    .error{
+        height: fit-content;
+        margin-bottom: 24px;
+    }
+
 }
